--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 ============================
+Version 2.14.1 - Sept 1, 2010
+============================
+
+Contributors:
+Gabriel Burt
+
+* Install .config file
+
+============================
 Version 2.14.0 - Sept 1, 2010
 ============================
 
